--- a/frontend/Rank-Up/src/app/user-profile/user-profile.page.html
+++ b/frontend/Rank-Up/src/app/user-profile/user-profile.page.html
@@ -1,26 +1,22 @@
 <ion-content [fullscreen]="true">
   <div class="backgroundUser">
 
-    <div id="div-image">
-      
-    </div>
+    <img class="imgUser" src="{{this.user_photo}}" />
+
     <div id="div-image-title">{{user_name}} {{user_surname}}</div>
 
     <div id="div-container">
-      
-      <div id="div-top">
 
-        <div class="div-large">
-          <div class="div-large-tag">Username</div>
-          <div class="div-large-value">{{user_username}}</div>
-        </div>
-
-        <div class="div-large">
-          <div class="div-large-tag">Email</div>
-          <div class="div-large-value">{{user_email}}</div>
-        </div>
-        
+      <div class="div-large">
+        <div class="div-large-tag">Username</div>
+        <div class="div-large-value">{{user_username}}</div>
       </div>
+
+      <div class="div-large">
+        <div class="div-large-tag">Email</div>
+        <div class="div-large-value">{{user_email}}</div>
+      </div>
+
       <div id="div-middle">
         <ion-grid>
           <ion-row>
@@ -39,7 +35,7 @@
 
             <ion-col>
               <div class="div-element">
-                <ion-button class="div-element-icon"  (click)="presentAlert2()">
+                <ion-button class="div-element-icon" (click)="presentAlert2()">
                   <ion-icon class="icon-black" name="ellipsis-horizontal-outline"></ion-icon>
                 </ion-button>
                 <div class="div-element-text">
@@ -47,7 +43,7 @@
                 </div>
               </div>
             </ion-col>
-            
+
           </ion-row>
           <ion-row>
             <ion-col>
@@ -72,7 +68,7 @@
             </ion-col>
           </ion-row>
           <ion-row>
-            <ion-col >
+            <ion-col>
               <div class="div-element">
                 <ion-button class="div-element-icon" (click)="presentAlert5()">
                   <ion-icon class="icon-black" name="eye-outline"></ion-icon>
@@ -97,33 +93,31 @@
       </div>
     </div>
     <app-bt-user-large [text]="'Logout'" [routerLink]="['/login']"></app-bt-user-large>
-    
-    
   </div>
 </ion-content>
 
 
 
 <ion-modal trigger="modalAttached">
-    <ng-template>
-      <ion-header>
-        <ion-toolbar>
-          <ion-title>Cambia foto</ion-title>
-        </ion-toolbar>
-      </ion-header>
-      <ion-content>
-        <div class="modal">
-          <ion-icon name="document-attach-outline" class="icon"></ion-icon>
-          <ion-button fill="clear">
-            <ion-input type="file" (change)="loadFileFromDevice($event)" id="file-input" accept="all">
-            </ion-input>
-          </ion-button>
+  <ng-template>
+    <ion-header>
+      <ion-toolbar>
+        <ion-title>Cambia foto</ion-title>
+      </ion-toolbar>
+    </ion-header>
+    <ion-content>
+      <div class="modal">
+        <ion-icon name="document-attach-outline" class="icon"></ion-icon>
+        <ion-button fill="clear">
+          <ion-input type="file" (change)="loadFileFromDevice($event)" id="file-input" accept="all">
+          </ion-input>
+        </ion-button>
 
-          <div>
-            <app-bt-user-small text="Annulla" (click)="closeModal()" style="padding-right: 0.5vh;"></app-bt-user-small>
-            <app-bt-user-small text="Cambia" (click)="attach()" style="padding-left: 0.5vh;"></app-bt-user-small>
-          </div>
+        <div>
+          <app-bt-user-small text="Annulla" (click)="closeModal()" style="padding-right: 0.5vh;"></app-bt-user-small>
+          <app-bt-user-small text="Cambia" (click)="attach()" style="padding-left: 0.5vh;"></app-bt-user-small>
         </div>
-      </ion-content>
-    </ng-template>
-  </ion-modal>
+      </div>
+    </ion-content>
+  </ng-template>
+</ion-modal>
