--- a/frontend/Rank-Up/src/app/request-history/request-history.page.html
+++ b/frontend/Rank-Up/src/app/request-history/request-history.page.html
@@ -18,8 +18,8 @@
     <div class="listBox">
       <ion-list class="notifications" lines="none">
 
-        <ion-item class="itemadmin" *ngFor="let activity of history" [routerLink]="['/task-rejected']">
-          <ion-icon name="close-circle-outline" size="small" class="icon"></ion-icon>
+        <ion-item class={{class}} *ngFor="let activity of history" [routerLink]="['/task-rejected']">
+          <ion-icon name={{icon}} size="small" class="icon"></ion-icon>
           <ion-label class="label">{{activity.user.username}}</ion-label>
           <ion-label class="label">{{activity.rule.name}}</ion-label>
           <ion-label class="label">{{activity.timestamp}}</ion-label>
