--- a/frontend/Rank-Up/src/app/signup/signup.page.html
+++ b/frontend/Rank-Up/src/app/signup/signup.page.html
@@ -13,10 +13,10 @@
       <ion-input [(ngModel)]="user.name" [type]="'text'" [placeholder]="'Nome'" fill="outline" shape="round" mode="md" class="formInput"></ion-input>
       <ion-input [(ngModel)]="user.surname" [type]="'text'" [placeholder]="'Cognome'" fill="outline" shape="round" mode="md" class="formInput"></ion-input>
       <ion-input [(ngModel)]="user.email" [type]="'text'" [placeholder]="'Email'" fill="outline" shape="round" mode="md" class="formInput"></ion-input>
-      <ion-input [(ngModel)]="user.username" [type]="'text'" [placeholder]="'Username'" fill="outline" shape="round" mode="md" class="formInput"></ion-input>
-      <ion-input [(ngModel)]="password" [type]="'password'" [placeholder]="'Password'" fill="outline" shape="round" mode="md" class="formInput"></ion-input>
+      <ion-input [(ngModel)]="user.username" (ionInput)="username_checker()" [type]="'text'" [placeholder]="'Username'" fill="outline" shape="round" mode="md" class="formInput"></ion-input>
+      <ion-input [(ngModel)]="password" (ionInput)="password_checker()" [type]="'password'" [placeholder]="'Password'" fill="outline" shape="round" mode="md" class="formInput"></ion-input>
 
-      <app-bt-user-small (click)="signup()" [text]="'Registrati'"></app-bt-user-small>
+      <ion-button [disabled]="!password_checker() || !username_checker()" id="btUserSmall" (click)="signup()">Registrati</ion-button><ion-button [disabled]="!password_checker() || !username_checker()" id="btUserSmall" (click)="signup()">Registrati</ion-button>
     </div>
   </div>
 
