--- a/frontend/Rank-Up/src/app/send-rule/send-rule.page.html
+++ b/frontend/Rank-Up/src/app/send-rule/send-rule.page.html
@@ -22,7 +22,7 @@
       <h4 align="center">Inviare richiesta di completamento?</h4>
       <div class="pulsanteBox">
         <div class="titoloBox">
-          <ion-button class="pulsante rifiuta">
+          <ion-button class="pulsante rifiuta" [routerLink]="['/user/rules-and-tasks-rules']">
             <ion-icon name="close-circle-outline"></ion-icon>
           </ion-button>
           <div class="text">Rifiuta</div>
