--- a/frontend/Rank-Up/src/app/user-profile/user-profile.page.html
+++ b/frontend/Rank-Up/src/app/user-profile/user-profile.page.html
@@ -1,26 +1,23 @@
 <ion-content [fullscreen]="true">
   <div class="backgroundUser">
 
-    <div id="div-image">
-      
-    </div>
+    <img class="imgUser" src="{{this.user_photo}}"/>
+
     <div id="div-image-title">{{user_name}} {{user_surname}}</div>
 
     <div id="div-container">
-      
-      <div id="div-top">
 
-        <div class="div-large">
-          <div class="div-large-tag">Username</div>
-          <div class="div-large-value">{{user_username}}</div>
-        </div>
 
-        <div class="div-large">
-          <div class="div-large-tag">Email</div>
-          <div class="div-large-value">{{user_email}}</div>
-        </div>
-        
+      <div class="div-large">
+        <div class="div-large-tag">Username</div>
+        <div class="div-large-value">{{user_username}}</div>
       </div>
+
+      <div class="div-large">
+        <div class="div-large-tag">Email</div>
+        <div class="div-large-value">{{user_email}}</div>
+      </div>
+
       <div id="div-middle">
         <ion-grid>
           <ion-row>
@@ -47,7 +44,7 @@
                 </div>
               </div>
             </ion-col>
-            
+
           </ion-row>
           <ion-row>
             <ion-col>
@@ -97,8 +94,8 @@
       </div>
     </div>
     <app-bt-user-large [text]="'Logout'" [routerLink]="['/login']"></app-bt-user-large>
-    
-    
+
+
   </div>
 </ion-content>
 
