--- a/frontend/Rank-Up/src/app/signup/signup.page.scss
+++ b/frontend/Rank-Up/src/app/signup/signup.page.scss
@@ -14,3 +14,18 @@
 app-bt-user-small{
   margin-top: 3vh;
 }
+#btUserSmall {
+  color: var(--ion-color-white);
+  --background: var(--ion-color-user);
+  font-size: 22px;
+  --border-radius: 28px;
+
+  height: 64px;
+  width: 150px;
+
+  margin-bottom: 1vh;
+
+  color: black;
+  font-weight: bold;
+}
+
