--- a/frontend/Rank-Up/src/app/login/login.page.scss
+++ b/frontend/Rank-Up/src/app/login/login.page.scss
@@ -64,3 +64,17 @@
     height: 0.4vh;
     width: 15vh;
 }
+#btUserSmall {
+    color: var(--ion-color-white);
+    --background: var(--ion-color-user);
+    font-size: 22px;
+    --border-radius: 28px;
+  
+    height: 64px;
+    width: 150px;
+  
+    margin-bottom: 1vh;
+  
+    color: black;
+    font-weight: bold;
+  }
