--- a/frontend/Rank-Up/src/app/login/login.page.html
+++ b/frontend/Rank-Up/src/app/login/login.page.html
@@ -11,7 +11,7 @@
         <ul *ngIf="errorCheck">
           Email o password errati
        </ul>
-        <ion-input [(ngModel)]="user.username" required class="formInput" [type]="'email'" [placeholder]="'Username'" fill="outline" shape="round" mode="md"></ion-input>
+        <ion-input [(ngModel)]="user.username" required class="formInput" [type]="'username'" [placeholder]="'Username'" fill="outline" shape="round" mode="md"></ion-input>
         <ion-input [(ngModel)]="password" required class="formInput" [type]="'password'" [placeholder]="'Password'" fill="outline" shape="round" mode="md"></ion-input>
       </div>
 
