--- a/frontend/Rank-Up/src/app/admin-prizes-page/admin-prizes-page.page.html
+++ b/frontend/Rank-Up/src/app/admin-prizes-page/admin-prizes-page.page.html
@@ -9,7 +9,7 @@
       <ion-icon name="add-circle-outline" size="large" color="dark"></ion-icon>
     </ion-button>
 
-    <h1 class="title">Premi<br/>[Nome Team]</h1>
+    <h1 class="title">Premi<br/>{{team.name}}</h1>
 
     <div class="listBox">
       <ion-list class="list">
