--- a/frontend/Rank-Up/src/app/prizes-page/prizes-page.page.html
+++ b/frontend/Rank-Up/src/app/prizes-page/prizes-page.page.html
@@ -7,7 +7,7 @@
     <div id="div-image">
       <img>
     </div>
-    <div id="div-image-title">{{user.username}} </div>
+    <div id="div-image-title">{{user.name}} </div>
 
     <div id="div-points">Punti: {{user_points}}</div>
 
