--- a/frontend/Rank-Up/src/app/search-team/search-team.page.html
+++ b/frontend/Rank-Up/src/app/search-team/search-team.page.html
@@ -16,9 +16,9 @@
         <div class="team-card" (click)="presentAlert()" *ngFor="let i of this.data">
           <img fill="clear" sizes="large" alt="photo non presente nel db" src={{i.photo}} />
           <h4 class="team-name">
-            {{i.name}}f
+            {{i.name}}
           </h4>
-        </div>        
+        </div>
       </div>
     </div>
   </div>
