--- a/frontend/Rank-Up/src/app/admin-list/admin-list.page.html
+++ b/frontend/Rank-Up/src/app/admin-list/admin-list.page.html
@@ -46,7 +46,7 @@
     <div class="listBox" *ngIf="!stato">
       <ion-list class="list" lines="none">
         <ion-item-sliding *ngFor="let userJoin of usersJoinsTeam let i = index">
-          <ion-item class="item" (click)="clickUser(user, userJoin)" [routerLink]="['/admin/admin-profile']">
+          <ion-item class="item" (click)="clickUser(users[i], userJoin)" [routerLink]="['/admin/admin-profile']">
             <div class="item-div">
             <img class="imgUser" alt="User" src="https://ionicframework.com/docs/img/demos/avatar.svg" />
             <ion-label class="nomeUtente">{{users[i].name}}</ion-label>
