--- a/frontend/Rank-Up/src/app/admin-profile/admin-profile.page.html
+++ b/frontend/Rank-Up/src/app/admin-profile/admin-profile.page.html
@@ -5,7 +5,7 @@
     </ion-button>
 
     <img class="imgUser" alt="Utente" src="https://ionicframework.com/docs/img/demos/avatar.svg" />
-    <h1 class="nameUser">{{user.name}}</h1>
+    <h1 class="nameUser">{{userProfile.name}}</h1>
     <h2 class="scoreUser">Punti: {{userJoin.points}}</h2>
 
     <div class="switch">
