--- a/frontend/Rank-Up/src/app/admin-team-settings/admin-team-settings.page.html
+++ b/frontend/Rank-Up/src/app/admin-team-settings/admin-team-settings.page.html
@@ -10,7 +10,7 @@
 
     <div class="buttons-div">
     <ion-button (click)="presentAlert1()" class="settings-button">Modifica nome team</ion-button>
-    <ion-button class="settings-button" id="modalAttached">Modifica foto team</ion-button>
+    <ion-button (click)="attach()" class="settings-button" id="modalAttached">Modifica foto team</ion-button>
     <ion-button class="settings-button" [routerLink]="['/admin/access-requests-list']">Richieste in attesa</ion-button>
 
     <img src="..\..\assets\image\black-line.svg" alt="">
@@ -20,7 +20,7 @@
 
     <ion-button (click)="presentAlert5()" class="delete-team">Elimina Team</ion-button>
     </div>
-  
+
   </div>
 </ion-content>
 
