--- a/frontend/Rank-Up/src/app/team-rules-tasks/team-rules-tasks.page.html
+++ b/frontend/Rank-Up/src/app/team-rules-tasks/team-rules-tasks.page.html
@@ -4,7 +4,7 @@
       <ion-icon name="arrow-back-outline" size="large"></ion-icon>
     </ion-button>
 
-    <h1 class="title">[Nome Team]</h1>
+    <h1 class="title">{{team.name}}</h1>
 
     <ion-button class="rightIcon" *ngIf="!stato" [routerLink] = "['/create-rule']">
       <ion-icon name="add-circle-outline" size="large" class="iconaRicerca"></ion-icon>
