--- a/frontend/Rank-Up/src/app/send-task/send-task.page.html
+++ b/frontend/Rank-Up/src/app/send-task/send-task.page.html
@@ -7,7 +7,7 @@
 
     <h1 align="center" class="title">Task</h1>
 
-    <div class="description">
+    <div class="description" *ngIf="this.data">
       <app-user-element-bar labelText={{this.data.taskName}} buttonText="Task"></app-user-element-bar>
       <br>
       <app-user-element-bar labelText={{this.data.points}} buttonText="Punti"></app-user-element-bar>
