--- a/frontend/Rank-Up/src/app/access-requests-list/access-requests-list.page.html
+++ b/frontend/Rank-Up/src/app/access-requests-list/access-requests-list.page.html
@@ -9,7 +9,7 @@
 
   <div class="listBox">
     <ion-list class="list" lines="none">
-      <ion-button (click)="presentAlert()" *ngFor="let item of [].constructor(14); let i = index" class="buttons">[Data] - [Nome Utente] ha richiesto di<br/>entrare nel Team [Nome Team]</ion-button>
+      <ion-button (click)="presentAlert()" *ngFor="let u of userJoin" class="buttons">{{u?.user?.name}} ha richiesto di<br/>entrare nel Team {{u?.team?.name}}</ion-button>
     </ion-list>
   </div>
   
