--- a/frontend/Rank-Up/src/app/user-rule-completed/user-rule-completed.page.html
+++ b/frontend/Rank-Up/src/app/user-rule-completed/user-rule-completed.page.html
@@ -13,8 +13,8 @@
       <app-user-element-bar class="elementbar" [buttonText]="'Punti'" [labelText]="rule.points"></app-user-element-bar>
     </div>
 
-    <ion-textarea class="descriptionArea" fill="outline" placeholder="Descrizione" shape="round" [readonly] = true>{{rule.description}}</ion-textarea>
-    <ion-textarea class="commentArea" fill="outline" placeholder="Commento" shape="round" [readonly] = true>{{ruleCompleted.comment}}</ion-textarea>
+    <ion-textarea class="descriptionArea" fill="outline" placeholder={{rule.description}} shape="round" [readonly] = true></ion-textarea>
+    <ion-textarea class="commentArea" fill="outline" placeholder={{ruleCompleted.comment}} shape="round" [readonly] = true></ion-textarea>
 
     <ion-grid class="buttons-grid">
       <ion-row>
