--- a/frontend/Rank-Up/src/app/user-rule-completed/user-rule-completed.page.scss
+++ b/frontend/Rank-Up/src/app/user-rule-completed/user-rule-completed.page.scss
@@ -58,3 +58,11 @@ ion-textarea{
 .leftIcon {
   --background: trasparent;
 }
+
+.label {
+  margin-bottom: -3vh;
+  margin-top: 3vh;
+  text-align: left;
+  margin-left: 15vh;
+  width: 100%;
+}
