update with user id

--- a/frontend/Rank-Up/src/app/admin-list/admin-list.page.html
+++ b/frontend/Rank-Up/src/app/admin-list/admin-list.page.html
@@ -29,7 +29,7 @@
           <ion-item class="item" (click)="clickUser(user, userJoin)" [routerLink]="['/admin/admin-profile']" >
             <div class="item-div">
             <img class="imgUser" alt="User" src="https://ionicframework.com/docs/img/demos/avatar.svg" />
-            <ion-label class="nomeUtente">{{userJoin.key.idUser}}</ion-label>
+            <ion-label class="nomeUtente">{{userJoin.user.id}}</ion-label>
             <ion-label class="points-label">{{userJoin.points}}</ion-label>
             </div>
 
