--- a/frontend/Rank-Up/src/app/notifications/notifications.page.html
+++ b/frontend/Rank-Up/src/app/notifications/notifications.page.html
@@ -8,13 +8,13 @@
 
     <div *ngSwitchCase="'utente'" class="backgroundUser" >
 
-      <ion-button class="leftIcon"  (click)="backButton()" > 
+      <ion-button class="leftIcon"  (click)="backButton()" >
         <ion-icon name="arrow-back-outline" size="large" ></ion-icon>
       </ion-button>
-    
+
       <h1 align="center" class="title">Notifiche</h1>
-    
-      <ion-segment class="choseUser" value="utente" [(ngModel)]="type" (ionChange)="segmentChanged($event)">
+
+      <ion-segment class="choseUser" value="utente" [(ngModel)]="type" (ionChange)="segmentChanged($event, user.id)">
         <ion-segment-button value=utente>
           <ion-label>Utente</ion-label>
         </ion-segment-button>
@@ -22,22 +22,12 @@
           <ion-label>Admin</ion-label>
         </ion-segment-button>
       </ion-segment>
-  
-      <ion-list class="notifications" lines="none">
+
+      <ion-list class="notifications" lines="none" *ngFor="let notification of userNotification">
         <ion-item class="item" [routerLink] = "['/user/user-notification-description']">
-          <ion-label class="data">[data]</ion-label>
-          <ion-label class="titolo">[titolo]</ion-label>
-          <ion-label class="nomeTeam">[nome team]</ion-label>
-        </ion-item>
-        <ion-item class="item" [routerLink] = "['/user/user-notification-description']">
-          <ion-label class="data">[data]</ion-label>
-          <ion-label class="titolo">[titolo]</ion-label>
-          <ion-label class="nomeTeam">[nome team]</ion-label>
-        </ion-item>
-        <ion-item class="item user" [routerLink] = "['/user/user-notification-description']">
-          <ion-label class="data">[data]</ion-label>
-          <ion-label class="titolo">[titolo]</ion-label>
-          <ion-label class="nomeTeam">[nome team]</ion-label>
+          <ion-label class="data">{{notification.date}}</ion-label>
+          <ion-label class="titolo">{{notification.title}}</ion-label>
+          <ion-label class="nomeTeam">{{notification.team.name}}</ion-label>
         </ion-item>
       </ion-list>
     </div>
@@ -47,10 +37,10 @@
       <ion-button class="leftIcon" (click)="backButton()">
         <ion-icon name="arrow-back-outline" size="large" ></ion-icon>
       </ion-button>
-    
+
       <h1 align="center" class="title">Notifiche</h1>
-    
-      <ion-segment class="choseAdmin" value="utente" [(ngModel)]="type" (ionChange)="segmentChanged($event)">
+
+      <ion-segment class="choseAdmin" value="utente" [(ngModel)]="type" (ionChange)="segmentChanged($event, user.id)">
         <ion-segment-button value=utente>
           <ion-label>Utente</ion-label>
         </ion-segment-button>
@@ -58,7 +48,7 @@
           <ion-label>Admin</ion-label>
         </ion-segment-button>
       </ion-segment>
-      
+
       <ion-list class="notifications" lines="none">
         <ion-item class="item" [routerLink] = "['/admin/admin-notification-description']">
           <ion-label class="data">[data]</ion-label>
