--- a/frontend/Rank-Up/src/app/create-task/create-task.page.html
+++ b/frontend/Rank-Up/src/app/create-task/create-task.page.html
@@ -8,20 +8,20 @@
     <h2 class="title">Crea un Task<br/>per [Nome Team]</h2>
 
     <div class="text-input">
-      <app-input placeholder="Nome"></app-input>
+      <ion-input [(ngModel)]="task.name" class="formInput" [type]="'text'" [placeholder]="'Nome'" fill="outline" shape="round" mode="md"></ion-input>
 
       <div class="input-div">
-        <app-input placeholder="Punti"></app-input>
+        <ion-input [(ngModel)]="task.points" class="formInput" [type]="'text'" [placeholder]="'Punti'" fill="outline" shape="round" mode="md"></ion-input>
       </div>
 
       <div class="input-div">
-        <app-input placeholder="Scadenza"></app-input>
+        <ion-input [(ngModel)]="task.endDate" class="formInput" [type]="'text'" [placeholder]="'Scadenza'" fill="outline" shape="round" mode="md"></ion-input>
       </div>
 
-      <ion-textarea fill="outline" placeholder="Descrizione"></ion-textarea>
+      <ion-textarea [(ngModel)]="task.desctiption" fill="outline" placeholder="Descrizione"></ion-textarea>
 
       <div class="button-div">
-        <ion-button (click)="presentAlert()" class="exclusive-button">
+        <ion-button (click)="presentAlert()" class="exclusive-button"  (click)="createTask()">
           <div class="internal-div">
             <span class="button-text">Rendi esclusivo per...</span>
             <ion-icon class="button-icon" name="add-outline" size="large"></ion-icon>
