--- a/frontend/Rank-Up/src/app/notifications/notifications.page.html
+++ b/frontend/Rank-Up/src/app/notifications/notifications.page.html
@@ -23,21 +23,11 @@
         </ion-segment-button>
       </ion-segment>
   
-      <ion-list class="notifications" lines="none">
+      <ion-list class="notifications" lines="none" *ngFor="let n of notifications">
         <ion-item class="item" [routerLink] = "['/user/user-notification-description']">
-          <ion-label class="data">[data]</ion-label>
-          <ion-label class="titolo">[titolo]</ion-label>
-          <ion-label class="nomeTeam">[nome team]</ion-label>
-        </ion-item>
-        <ion-item class="item" [routerLink] = "['/user/user-notification-description']">
-          <ion-label class="data">[data]</ion-label>
-          <ion-label class="titolo">[titolo]</ion-label>
-          <ion-label class="nomeTeam">[nome team]</ion-label>
-        </ion-item>
-        <ion-item class="item user" [routerLink] = "['/user/user-notification-description']">
-          <ion-label class="data">[data]</ion-label>
-          <ion-label class="titolo">[titolo]</ion-label>
-          <ion-label class="nomeTeam">[nome team]</ion-label>
+          <ion-label class="data">{{n.date}}</ion-label>
+          <ion-label class="titolo">{{n.title}}</ion-label>
+          <ion-label class="nomeTeam">{{n.team.name}}</ion-label>
         </ion-item>
       </ion-list>
     </div>
