--- a/frontend/Rank-Up/src/app/rules-and-tasks-rules/rules-and-tasks-rules.page.html
+++ b/frontend/Rank-Up/src/app/rules-and-tasks-rules/rules-and-tasks-rules.page.html
@@ -20,7 +20,7 @@
 
     <div id="div-rules-tasks" scroll="true" *ngIf="!stato">
       <ion-list id="div-rule-task" *ngFor="let rule of rules">
-          <ion-item id="div-rule-task">
+          <ion-item id="div-rule-task" [routerLink] = "['/send-rule']">
             <ion-label class="label" >{{rule.name}}</ion-label>
           <ion-button class="fakebutton" [disabled]="true" >{{rule.points}}</ion-button>
 
@@ -35,7 +35,7 @@
 
     <div id="div-rules-tasks" scroll="true" *ngIf="stato">
       <ion-list id="div-rule-task" *ngFor="let task of tasks">
-          <ion-item id="div-rule-task">
+          <ion-item id="div-rule-task" [routerLink] = "['/send-task']">
             <ion-label class="label">{{task.name}}</ion-label>
           <ion-button class="fakebutton" [disabled]="true">{{task.points}}</ion-button>
 
