--- a/frontend/Rank-Up/src/app/prizes-page/prizes-page.page.html
+++ b/frontend/Rank-Up/src/app/prizes-page/prizes-page.page.html
@@ -1,6 +1,6 @@
 <ion-content [fullscreen]="true">
   <div class="backgroundUser">
-    <ion-button class="leftIcon" [routerLink] = "['/user/team']">
+    <ion-button class="leftIcon" (click)="backButton()">
       <ion-icon name="arrow-back-outline" size="large"></ion-icon>
     </ion-button>
 
