--- a/frontend/Rank-Up/src/app/signup/signup.page.html
+++ b/frontend/Rank-Up/src/app/signup/signup.page.html
@@ -1,7 +1,7 @@
 <ion-content [fullscreen]="true">
   <div class="backgroundLightUser">
 
-    <ion-button class="leftIcon" [routerLink]="['/login']">
+    <ion-button class="leftIcon" (click)="backButton()">
       <ion-icon name="arrow-back-outline" size="large"></ion-icon>
     </ion-button>
 
