--- a/frontend/Rank-Up/src/app/user-notification-description/user-notification-description.page.html
+++ b/frontend/Rank-Up/src/app/user-notification-description/user-notification-description.page.html
@@ -5,9 +5,9 @@
       <ion-icon name="arrow-back-outline" size="large"></ion-icon>
     </ion-button>
 
-    <h1 align="center" class="title">[Titolo notifica]</h1>
+    <h1 align="center" class="title">{{notification.title}}</h1>
 
-    <h4 align="center" class="subtitle">[Data notifica]</h4>
+    <h4 align="center" class="subtitle">{{notification.date}}</h4>
 
     <ion-textarea fill="outline" placeholder="Descrizione" shape="round" [readonly] = true></ion-textarea>
   </div>
