--- a/frontend/Rank-Up/src/app/user-notification-description/user-notification-description.page.html
+++ b/frontend/Rank-Up/src/app/user-notification-description/user-notification-description.page.html
@@ -9,6 +9,6 @@
 
     <h4 align="center" class="subtitle">{{notification.date}}</h4>
 
-    <ion-textarea fill="outline" placeholder="Descrizione" shape="round" [readonly] = true></ion-textarea>
+    <ion-textarea fill="outline" shape="round" [readonly] = true>{{notification.description}}</ion-textarea>
   </div>
 </ion-content>
