--- a/frontend/Rank-Up/src/app/user-rule-completed/user-rule-completed.page.html
+++ b/frontend/Rank-Up/src/app/user-rule-completed/user-rule-completed.page.html
@@ -5,7 +5,7 @@
       <ion-icon name="arrow-back-outline" class="iconaBack" size="large"></ion-icon>
     </ion-button>
 
-    <h1 class="title">Regola completato da<br/>{{user.name}}</h1>
+    <h1 class="title">Regola completata da<br/>{{user.name}}</h1>
 
     <div class="div-element-bar">
       <app-user-element-bar class="elementbar" [buttonText]="'Regola'" [labelText]="rule.name"></app-user-element-bar>
