--- a/frontend/Rank-Up/src/app/admin-rule-completed/admin-rule-completed.page.html
+++ b/frontend/Rank-Up/src/app/admin-rule-completed/admin-rule-completed.page.html
@@ -6,16 +6,16 @@
       <ion-icon name="arrow-back-outline" class="iconaBack" size="large"></ion-icon>
     </ion-button>
 
-    <h1 class="title">Regola completata<br/>da [Nome Utente]</h1>
+    <h1 class="title">Regola completata da<br/>{{user.username}}</h1>
 
     <div class="div-element-bar">
-      <app-admin-element-bar class="elementbar" [buttonText]="'Regola'" [labelText]="'[Nome Regola]'"></app-admin-element-bar>
+      <app-admin-element-bar class="elementbar" [buttonText]="'Regola'" [labelText]="rule.name"></app-admin-element-bar>
       <div class="space-div"></div>
-      <app-admin-element-bar class="elementbar" [buttonText]="'Punti'" [labelText]="'[Punti]'"></app-admin-element-bar>
+      <app-admin-element-bar class="elementbar" [buttonText]="'Punti'" [labelText]="rule.points"></app-admin-element-bar>
     </div>
 
-    <ion-textarea class="descriptionArea" fill="outline" placeholder="Descrizione" shape="round" [readonly] = true></ion-textarea>
-    <ion-textarea class="commentArea" fill="outline" placeholder="Commento" shape="round" [readonly] = true></ion-textarea>
+    <ion-textarea class="descriptionArea" fill="outline" placeholder="Descrizione" shape="round" [readonly] = true>{{rule.description}}</ion-textarea>
+    <ion-textarea class="commentArea" fill="outline" placeholder="Commento" shape="round" [readonly] = true>{{ruleCompleted.comment}}</ion-textarea>
 
     <ion-grid class="buttons-grid">
       <ion-row>
