--- a/frontend/Rank-Up/src/app/admin-notification-description/admin-notification-description.page.html
+++ b/frontend/Rank-Up/src/app/admin-notification-description/admin-notification-description.page.html
@@ -5,10 +5,10 @@
       <ion-icon name="arrow-back-outline" size="large"></ion-icon>
     </ion-button>
 
-    <h1 align="center" class="title">[Titolo notifica]</h1>
+    <h1 align="center" class="title">{{notification.title}}</h1>
 
-    <h4 align="center" class="subtitle">[Data notifica]</h4>
+    <h4 align="center" class="subtitle">{{notification.date}}</h4>
 
-    <ion-textarea fill="outline" placeholder="Descrizione" shape="round" [readonly] = true></ion-textarea>
+    <ion-textarea fill="outline" shape="round" [readonly] = true>{{notification.description}}</ion-textarea>
   </div>
 </ion-content>
