--- a/frontend/Rank-Up/src/app/notifications/notifications.page.html
+++ b/frontend/Rank-Up/src/app/notifications/notifications.page.html
@@ -14,7 +14,7 @@
 
       <h1 align="center" class="title">Notifiche</h1>
 
-      <ion-segment class="choseUser" value="utente" [(ngModel)]="type" (ionChange)="segmentChanged($event, user.id)">
+      <ion-segment class="choseUser" value="utente" [(ngModel)]="type" (ionChange)="segmentChanged($event, user.id, 1)">
         <ion-segment-button value=utente>
           <ion-label>Utente</ion-label>
         </ion-segment-button>
@@ -40,7 +40,7 @@
 
       <h1 align="center" class="title">Notifiche</h1>
 
-      <ion-segment class="choseAdmin" value="utente" [(ngModel)]="type" (ionChange)="segmentChanged($event, user.id)">
+      <ion-segment class="choseAdmin" value="utente" [(ngModel)]="type" (ionChange)="segmentChanged($event, user.id, 1)">
         <ion-segment-button value=utente>
           <ion-label>Utente</ion-label>
         </ion-segment-button>
@@ -49,19 +49,11 @@
         </ion-segment-button>
       </ion-segment>
 
-      <ion-list class="notifications" lines="none">
-        <ion-item class="item" [routerLink] = "['/admin/admin-notification-description']">
-          <ion-label class="data">[data]</ion-label>
-          <ion-label class="titolo">[titolo]</ion-label>
-          <ion-label class="nomeTeam">[nome team]</ion-label>
-        </ion-item>
-        <ion-item class="item admin" id="ingresso" [routerLink] = "['/admin/admin-notification-description']">
-          <ion-label class="titolo">[data] L'utente [nome utente] richiede di entrare nel team [nome team]</ion-label>
-        </ion-item>
-        <ion-item class="item" [routerLink] = "['/admin/admin-notification-description']">
-          <ion-label class="data">[data]</ion-label>
-          <ion-label class="titolo">[titolo]</ion-label>
-          <ion-label class="nomeTeam">[nome team]</ion-label>
+      <ion-list class="notifications" lines="none" *ngFor="let n of adminNotifications">
+        <ion-item class="item" [routerLink] = "['/admin/admin-notification-description', n.notification.id]">
+          <ion-label class="data">{{n.notification.date}}</ion-label>
+          <ion-label class="titolo">{{n.notification.title}}</ion-label>
+          <ion-label class="nomeTeam">{{n.notification.team.name}}</ion-label>
         </ion-item>
       </ion-list>
     </div>
