fixed grid in home page

--- a/frontend/Rank-Up/src/app/home/home.page.html
+++ b/frontend/Rank-Up/src/app/home/home.page.html
@@ -19,10 +19,10 @@
     </ion-item>
 
     <div class="list-teams" scroll="true">
-      <ion-grid>
+      <ion-grid [ariaColCount]="2">
         <ion-row>
-          <ion-col *ngFor="let team of teamsUser">
-            <div class="team-card" (click)="goToTeamUser(team)">
+          <ion-col *ngFor="let team of teams" sizeLg="6"  sizeMd="6" sizeXs="6" >
+            <div *ngIf="userOrAdmin(team)"class="team-card" (click)="goToTeamUser(team)">
               <div class="img-team-user">
                 <img sizes="large" alt="Team" src={{team.photo}} />
               </div>
@@ -30,11 +30,7 @@
                 <span>{{team.name}}</span>
               </div>
             </div>
-          </ion-col>
-        </ion-row>
-        <ion-row>
-          <ion-col *ngFor="let team of teamsAdmin">
-            <div class="team-card" (click)="goToTeamAdmin(team)">
+            <div *ngIf="!userOrAdmin(team)"class="team-card" (click)="goToTeamAdmin(team)">
               <div class="img-team-admin">
                 <img sizes="large" alt="Team" src={{team.photo}} />
               </div>
@@ -46,92 +42,6 @@
         </ion-row>
       </ion-grid>
     </div>
-
-    <!--div class="list-teams" scroll="true">
-      <ion-grid>
-        <ion-row>
-          <ion-col>
-            <div class="team-card"[routerLink]="['/user/team']">
-              <div class="img-team-user">
-                <img sizes="large" alt="Team" src="../../assets/image/unimol.png" />
-              </div>
-              <div class="team-name">
-                <span>Team Fasano</span>
-              </div>
-            </div>
-          </ion-col>
-          <ion-col>
-            <div class="team-card" [routerLink]="['/admin/admin-home-team']">
-              <div class="img-team-admin">
-                <img sizes="large" alt="Team" src="../../assets/image/unimol.png" />
-              </div>
-              <div class="team-name">
-                <span>Team Fasano</span>
-              </div>
-            </div>
-          </ion-col>
-        </ion-row>
-        <ion-row>
-          <ion-col>
-            <div class="team-card" [routerLink]="['/user/team']">
-              <div class="img-team-user">
-                <img sizes="large" alt="Team" src="../../assets/image/unimol.png" />
-              </div>
-              <div class="team-name">
-                <span>Team Fasano</span>
-              </div>
-            </div>
-          </ion-col>
-          <ion-col>
-            <div class="team-card" [routerLink]="['/user/team']">
-              <div class="img-team-user">
-                <img sizes="large" alt="Team" src="../../assets/image/unimol.png" />
-              </div>
-              <div class="team-name">
-                <span>Team Fasano</span>
-              </div>
-            </div>
-          </ion-col>
-        </ion-row>
-        <ion-row>
-          <ion-col>
-            <div class="team-card" [routerLink]="['/user/team']">
-              <div class="img-team-user">
-                <img sizes="large" alt="Team" src="../../assets/image/unimol.png" />
-              </div>
-              <div class="team-name">
-                <span>Team Fasano</span>
-              </div>
-            </div>
-          </ion-col>
-          <ion-col>
-            <div class="team-card" [routerLink]="['/user/team']">
-              <div class="img-team-user">
-                <img sizes="large" alt="Team" src="../../assets/image/unimol.png" />
-              </div>
-              <div class="team-name">
-                <span>Team Fasano</span>
-              </div>
-            </div>
-          </ion-col>
-        </ion-row>
-        <ion-row>
-          <ion-col>
-            <div class="team-card" [routerLink]="['/user/team']">
-              <div class="img-team-user">
-                <img sizes="large" alt="Team" src="../../assets/image/unimol.png" />
-              </div>
-              <div class="team-name">
-                <span>Team Fasano</span>
-              </div>
-            </div>
-          </ion-col>
-          <ion-col>
-
-          </ion-col>
-        </ion-row>
-      </ion-grid>
-    </div-->
 
   </div>
 </ion-content>
