tested local storage for team

--- a/frontend/Rank-Up/src/app/admin-home-team/admin-home-team.page.html
+++ b/frontend/Rank-Up/src/app/admin-home-team/admin-home-team.page.html
@@ -6,8 +6,8 @@
     </ion-button>
 
     <div>
-      <h1 class="title">[Nome team]</h1>
-      <h2 class="team-code">Codice: [Codice Team]</h2>
+      <h1 class="title">{{team.name}}</h1>
+      <h2 class="team-code">Codice: {{team.codice}}</h2>
     </div>
 
     <ion-button class="rightIcon" fill="clear" [routerLink] = "['/admin-team-settings']">
