--- a/frontend/Rank-Up/src/app/create-rule/create-rule.page.html
+++ b/frontend/Rank-Up/src/app/create-rule/create-rule.page.html
@@ -5,7 +5,7 @@
       <ion-icon name="arrow-back-outline" size="large"></ion-icon>
     </ion-button>
 
-    <h2 class="title">Crea una Regola<br/>per [Nome Team]</h2>
+    <h2 class="title">Crea una Regola<br/>per {{team.name}}</h2>
 
     <div class="text-input">
       <ion-input [(ngModel)]="rule.name" class="formInput" [type]="'text'" [placeholder]="'Nome'" fill="outline" shape="round" mode="md"></ion-input>
