--- a/frontend/Rank-Up/src/app/admin-team-settings/admin-team-settings.page.html
+++ b/frontend/Rank-Up/src/app/admin-team-settings/admin-team-settings.page.html
@@ -5,8 +5,8 @@
       <ion-icon name="arrow-back-outline" size="large"></ion-icon>
     </ion-button>
 
-    <h1 class="title">[Nome Team]</h1>
-    <h2 class="team-code">Codice: [Codice Team]</h2>
+    <h1 class="title">{{team.name}}</h1>
+    <h2 class="team-code">Codice: {{team.codice}}</h2>
 
     <div class="buttons-div">
     <ion-button (click)="presentAlert1()" class="settings-button">Modifica nome team</ion-button>
