--- a/frontend/Rank-Up/src/app/admin-rule-completed/admin-rule-completed.page.html
+++ b/frontend/Rank-Up/src/app/admin-rule-completed/admin-rule-completed.page.html
@@ -14,8 +14,10 @@
       <app-admin-element-bar class="elementbar" [buttonText]="'Punti'" [labelText]="rule.points"></app-admin-element-bar>
     </div>
 
-    <ion-textarea class="descriptionArea" fill="outline" placeholder="Descrizione" shape="round" [readonly] = true>{{rule.description}}</ion-textarea>
-    <ion-textarea class="commentArea" fill="outline" placeholder="Commento" shape="round" [readonly] = true>{{ruleCompleted.comment}}</ion-textarea>
+    <ion-label class="label">Descrizione:</ion-label>
+    <ion-textarea class="commentArea" fill="outline" placeholder={{rule.description}} shape="round" [readonly] = true></ion-textarea>
+    <ion-label class="label">Commento:</ion-label>
+    <ion-textarea class="commentArea" fill="outline" placeholder={{ruleCompleted.comment}} shape="round" [readonly] = true></ion-textarea>
 
     <ion-grid class="buttons-grid">
       <ion-row>
