added local storage

--- a/frontend/Rank-Up/src/app/user-team-profile/user-team-profile.page.html
+++ b/frontend/Rank-Up/src/app/user-team-profile/user-team-profile.page.html
@@ -11,7 +11,7 @@
 
     <ion-label class="userName">{{user.name}}</ion-label>
 
-    <ion-label class="points">Punti: {{userJoin.points}}</ion-label>
+    <ion-label class="points">Punti: {{userjoin.points}}</ion-label>
 
     <div class="switch">
       <ion-segment value="1" (ionChange)="segmentChanged($event)">
